--- a/templates/ficha_mueble.html.twig
+++ b/templates/ficha_mueble.html.twig
@@ -7,5 +7,8 @@
     {% else %}
         <h4>Mueble no encontrado</h4>
     {% endif %}
-
+    <br>
+    <footer>
+        <a href="/logout" class="button">Cerrar sesión</a>
+    </footer>
 {% endblock %}
